--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "react-bootstrap": "^2.9.1",
     "react-datepicker": "^4.21.0",
     "react-dom": "^18.2.0",
+    "react-highlight-words": "^0.20.0",
     "react-router-dom": "^6.18.0"
   },
   "devDependencies": {
